it is 2017 dammit

--- a/example.html
+++ b/example.html
@@ -1,12 +1,16 @@
 <html>
-	<head></head>
-	<body>
-		<script src="requireGist.js"></script>
-		<script type="text/javascript">
-			requireGist('7390481', ['file two', 'file one'], function(first, second) {
-				first();
-				second();
-			});
-		</script>
-	</body>
+
+<head></head>
+
+<body>
+	<script src="requireGist.js"></script>
+	<script type="text/javascript">
+		(async () => {
+			const [first, second] = await requireGist('7390481', ['file two', 'file one']);
+			first();
+			second();
+		})()
+	</script>
+</body>
+
 </html>
